force-app/main/default/objects/prm_ListViewConfig__mdt/prm_ListViewConfig__mdt.object-meta.xml
<CustomObject>
    <description>Will be used by generic LWC to display listview with export button on LWR sites</description>
    <label>prm_ListViewConfig</label>
    <pluralLabel>prm_ListViewConfigs</pluralLabel>
</CustomObject>