force-app/main/default/objects/prm_ListViewConfig__mdt/fields/prm_Allow_Export__c.field-meta.xml
<CustomField>
    <fullName>prm_Allow_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Where export button needed or not?</inlineHelpText>
    <label>Allow Export</label>
    <type>Checkbox</type>
</CustomField>