force-app/main/default/objects/prm_ListViewConfig__mdt/fields/prm_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>prm_Field_API_Names__c</fullName>
    <inlineHelpText>Enter fileds API name seperated by comma</inlineHelpText>
    <label>Field API Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>