force-app/main/default/objects/prm_ListViewConfig__mdt/fields/prm_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>prm_Icon_Name__c</fullName>
    <inlineHelpText>Icon name for list view</inlineHelpText>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>