force-app/main/default/objects/prm_ListViewConfig__mdt/fields/prm_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>prm_Object_API_Name__c</fullName>
    <inlineHelpText>API name of object</inlineHelpText>
    <label>Object API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>