force-app/main/default/objects/prm_ListViewConfig__mdt/fields/prm_Sortable_Fields__c.field-meta.xml
<CustomField>
	<fullName>prm_Sortable_Fields__c</fullName>
	<inlineHelpText>Comma-separated API names that can be sorted (e.g. Name,Industry,OwnerId). Relationship fields with dots are not supported.</inlineHelpText>
	<label>Sortable Fields</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>