force-app/main/default/objects/prm_ListViewConfig__mdt/fields/prm_Title__c.field-meta.xml
<CustomField>
    <fullName>prm_Title__c</fullName>
    <inlineHelpText>Title of the list view</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>