force-app/main/default/objects/prm_ListViewConfig__mdt/fields/prm_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>prm_Where_Clause__c</fullName>
    <inlineHelpText>Where clause to filter out data</inlineHelpText>
    <label>Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>